# sigil-experiments

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
configs/: phase1_100pct.yaml  phase2_d01.yaml  phase2_d05.yaml  phase2_d10.yaml  phase2_d25.yaml  phase2_d50.yaml  phase2_d75.yaml  phase4b_washout.yaml
prompts/: category_a_artist_named.txt  category_b_style_matched.txt  category_c_generic.txt  category_d_ood.txt
scripts/: 00_baseline_measurements.py  01_finetune.py  02_generate.py  03_detect.py  04_dilution_sweep.py  05_multi_author.py  06_phase4_controls.py  download_artist_data.py  download_filler_data.py  prepare_dataset.py  setup_runpod.sh
scripts/utils/: captioning.py  config.py  metrics.py  plotting.py  sync.py
src/runpod_cli/: __init__.py  cli.py  config.py
